--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,7 +18,7 @@
 #
 # --------------------------------------------------------------------------------------
 
-name: 🚀 Auto Release
+name: 🚀 Release
 
 on:
     push:
