renamed the variable name

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ on:
 
 env:
     INTEGRATION_TYPES: applications,connections
-    MAIN_VERSION: v1.0.0
+    INITIAL_VERSION: v1.0.0
 
 jobs:
     release_integration_templates:
@@ -115,4 +115,4 @@ jobs:
                 GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
                 OWNER: ${{ github.repository_owner }}
                 REPO: ${{ github.event.repository.name }}
-                MAIN_VERSION: ${{ env.MAIN_VERSION }}
+                INITIAL_VERSION: ${{ env.INITIAL_VERSION }}
