fix the production build issue of markdown-editor

--- a/sandbox/apps/markdown-editor/tsconfig.app.json
+++ b/sandbox/apps/markdown-editor/tsconfig.app.json
@@ -33,6 +33,6 @@
     },
     "include": [
         "src",
-        "wso2_modules/console-theme"
+        "../../packages/console-theme/*.ts"
     ]
 }
