--- a/sandbox/apps/markdown-editor/package.json
+++ b/sandbox/apps/markdown-editor/package.json
@@ -1,11 +1,6 @@
 {
     "name": "markdown-editor",
     "private": true,
-    "workspaces": [
-        "wso2_modules/core",
-        "wso2_modules/theme",
-        "wso2_modules/react-components"
-    ],
     "version": "1.0.0",
     "type": "module",
     "description": "Markdown editor for writing WSO2 Identity Server integration guides.",
@@ -13,19 +8,20 @@
     "license": "Apache-2.0",
     "scripts": {
         "dev": "vite",
-        "build": "pnpm lint && vite build",
+        "build": "pnpm lint && tsc -b && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
     "dependencies": {
         "@oxygen-ui/react": "^1.13.2",
         "@oxygen-ui/react-icons": "^1.13.2",
+        "@wso2is/react-components": "workspace:*",
         "lodash-es": "^4.17.21",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "@wso2is/react-components": "workspace:*"
+        "react-dom": "^18.3.1"
     },
     "devDependencies": {
+        "@rollup/plugin-node-resolve": "^15.2.3",
         "@types/codemirror": "^5.52.0",
         "@types/lodash-es": "^4.17.4",
         "@types/react": "^18.3.3",
@@ -43,12 +39,7 @@
         "eslint-plugin-tsdoc": "^0.2.16",
         "prettier": "^2.8.0",
         "typescript": "^5.2.2",
-        "vite": "^5.3.4",
+        "vite": "^5.3.5",
         "vite-plugin-node-polyfills": "^0.22.0"
-    },
-    "pnpm": {
-        "overrides": {
-            "@types/react": "18.0.18"
-        }
     }
 }
