Add a specific pnpm version

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -54,7 +54,7 @@ jobs:
         id: setup-pnpm
         uses: pnpm/action-setup@v2.1.0
         with:
-          version: latest
+          version: [ 8.7.4 ]
           run_install: false
 
       - name: 🎈 Get pnpm store directory
