--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -36,6 +36,7 @@ jobs:
     strategy:
       matrix:
         node-version: [lts/*]
+        pnpm-version: [ 8.7.4 ]
     steps:
       - name: ⬇️ Checkout
         id: checkout
@@ -54,7 +55,7 @@ jobs:
         id: setup-pnpm
         uses: pnpm/action-setup@v2.1.0
         with:
-          version: [ 8.7.4 ]
+          version: ${{ matrix.pnpm-version }}
           run_install: false
 
       - name: 🎈 Get pnpm store directory
