--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -36,56 +36,13 @@ jobs:
     strategy:
       matrix:
         node-version: [lts/*]
-        pnpm-version: [ 8.7.4 ]
+        pnpm-version: [8.7.4]
     steps:
       - name: ⬇️ Checkout
-        id: checkout
-        uses: actions/checkout@v2.3.3
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
           token: ${{ env.GH_TOKEN }}
 
       - name: 🟢 Setup node
-        id: setup-node
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-
-      - name: 🥡 Setup pnpm
-        id: setup-pnpm
-        uses: pnpm/action-setup@v2.1.0
-        with:
-          version: ${{ matrix.pnpm-version }}
-          run_install: false
-
-      - name: 🎈 Get pnpm store directory
-        id: get-pnpm-cache-dir
-        run: |
-          echo "::set-output name=pnpm_cache_dir::$(pnpm store path)"
-
-      - name: 🧩 Install Dependencies
-        id: install-dependencies
-        run: |
-          cd sandbox
-          pnpm bootstrap
-
-      - name: 🏗️ Build Project
-        id: build
-        run: |
-          cd sandbox
-          export BASE_PATH="/${{ github.event.inputs.basePath }}"
-          pnpm build
-
-      - name: ⚙️ Setup Pages
-        id: setup-pages
-        uses: actions/configure-pages@v3
-
-      - name: 🌩 Upload artifact
-        id: upload-artifact
-        uses: actions/upload-pages-artifact@v1
-        with:
-          path: ./sandbox/apps/markdown-editor/dist
-
-      - name: 🔥 Deploy to GitHub Pages
-        id: deploy-gh-pages
-        uses: actions/deploy-pages@v1
+        uses: actions
