--- a/integrations/applications/pom.xml
+++ b/integrations/applications/pom.xml
@@ -35,6 +35,19 @@
         <module>traditional-web-application</module>
     </modules>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <preparationGoals>clean install</preparationGoals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
         <zip.root.directory.name>applications</zip.root.directory.name>
     </properties>
