--- a/integrations/pom.xml
+++ b/integrations/pom.xml
@@ -23,7 +23,7 @@
         <version>1.4</version>
     </parent>
     
-    <name>Integrations Aggregator Pom</name>
+    <name>Integrations Templates</name>
     <groupId>org.wso2.carbon.identity.integration.ui.templates</groupId>
     <artifactId>identity-inetgration-ui-templates</artifactId>
     <modelVersion>4.0.0</modelVersion>
@@ -50,8 +50,36 @@
         </snapshotRepository>
     </distributionManagement>
 
-    <modules>
-        <module>applications</module>
-    </modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <descriptors>
+                        <descriptor>zip.xml</descriptor>
+                    </descriptors>
+                    <appendAssemblyId>false</appendAssemblyId>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <preparationGoals>clean install</preparationGoals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
