--- a/integrations/pom.xml
+++ b/integrations/pom.xml
@@ -29,6 +29,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <version>1.0.3-SNAPSHOT</version>
+    <url>http://wso2.org</url>
 
     <scm>
         <url>https://github.com/wso2-extensions/identity-integration-ui-templates.git</url>
