configure maven-deploy-plugin to deploy zip artifacts

--- a/integrations/pom.xml
+++ b/integrations/pom.xml
@@ -113,6 +113,23 @@
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <executions>
+                        <execution>
+                            <id>deploy-zip</id>
+                            <phase>deploy</phase>
+                            <goals>
+                                <goal>deploy</goal>
+                            </goals>
+                            <configuration>
+                                <file>${project.build.directory}/${project.artifactId}-${project.version}.zip</file>
+                                <type>zip</type>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
