add maven-assembly plugin

--- a/integrations/pom.xml
+++ b/integrations/pom.xml
@@ -84,24 +84,21 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-antrun-plugin</artifactId>
+                    <artifactId>maven-assembly-plugin</artifactId>
+                    <version>3.7.1</version>
+                    <configuration>
+                        <descriptors>
+                            <descriptor>zip.xml</descriptor>
+                        </descriptors>
+                        <appendAssemblyId>false</appendAssemblyId>
+                    </configuration>
                     <executions>
                         <execution>
+                            <id>make-assembly</id>
                             <phase>package</phase>
                             <goals>
-                                <goal>run</goal>
+                                <goal>single</goal>
                             </goals>
-                            <configuration>
-                                <target>
-                                    <mkdir dir="${project.build.directory}/template/${zip.root.dir.path}" />
-                                    <copy todir="${project.build.directory}/template/${zip.root.dir.path}">
-                                        <fileset dir="resources" />
-                                    </copy>
-                                    <zip destfile="${project.build.directory}/${project.artifactId}-${project.version}.zip">
-                                        <fileset dir="${project.build.directory}/template" />
-                                    </zip>
-                                </target>
-                            </configuration>
                         </execution>
                     </executions>
                 </plugin>
@@ -112,26 +109,6 @@
                         <preparationGoals>clean install</preparationGoals>
                         <autoVersionSubmodules>true</autoVersionSubmodules>
                     </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-deploy-plugin</artifactId>
-                    <executions>
-                        <execution>
-                            <id>deploy-zip</id>
-                            <phase>deploy</phase>
-                            <goals>
-                                <goal>deploy</goal>
-                            </goals>
-                            <configuration>
-                                <file>${project.build.directory}/${project.artifactId}-${project.version}.zip</file>
-                                <groupId>${project.groupId}</groupId>
-                                <artifactId>${project.artifactId}</artifactId>
-                                <version>${project.version}</version>
-                                <packaging>zip</packaging>
-                            </configuration>
-                        </execution>
-                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
