add the same workflow name to the job

--- a/.github/workflows/check-templates-versions.yml
+++ b/.github/workflows/check-templates-versions.yml
@@ -12,6 +12,7 @@ concurrency:
 
 jobs:
   check-versions:
+    name: 🚧 Templates Version Check
     runs-on: ubuntu-latest
     strategy:
       matrix:
